modified:   package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/MuneebGulzar/error-404-react.git",
+  "homepage": "https://muneebgulzar.github.io/error-404-react/",
   "name": "error-404-react",
   "version": "0.1.0",
   "private": true,
